<resources>
    <string name="app_name">PrepLadder</string>
    <string name="user_id">User ID</string>
    <string name="firstyear">FY</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="create_new_account">Create New Account</string>
    <string name="hi">Hi!</string>
    <string name="keep_exploring">Keep exploring</string>
    <string name="search_your_book">Search your book</string>
    <string name="books">Books</string>
    <string name="comming_soon">comming soon</string>
    <string name="articles">Articles</string>
    <string name="notes">Notes</string>
    <string name="p_y_q">P.Y.Q</string>
    <string name="sy">SY</string>
    <string name="ty">TY</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="email">Email</string>
    <string name="todo">TODO</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="keep_reading">Keep Reading,</string>
    <string name="you_ll_fall_in_love">You\'ll fall in love</string>
    <string name="the_only_place_where_success_comes_before_work_is_in_the_dictionary">The only place where success comes before work is in the dictionary.</string>
    <string name="welcome">Welcome</string>
    <string name="next_page">next page</string>
    <string name="book_holding_girl_picture">book holding girl picture</string>
    <string name="coming_soon_image">Coming soon image</string>
    <string name="next">next</string>
    <string name="first_year">First Year</string>
    <string name="second_year">Second Year</string>
    <string name="third_year">Third Year</string>
    <string name="p_y_ques">P.Y.Ques</string>
</resources>