<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f3f6f4"
        tools:context=".page2">


        <ScrollView
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="4dp">

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="93dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:text="@string/hi"
                        android:textColor="#5b5b5b"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.068"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.022"
                        tools:ignore="MissingConstraints" />


                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="191dp"
                        android:includeFontPadding="true"
                        android:text="@string/keep_exploring"
                        android:textColor="#0c343d"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.143"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.083" />

                    <EditText
                        android:id="@+id/editTextTextPersonName6"
                        android:layout_width="380dp"
                        android:layout_height="48dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="40dp"
                        android:layout_marginStart="12dp"
                        android:backgroundTint="@color/black"
                        android:bottomLeftRadius="15dp"
                        android:bottomRightRadius="15dp"
                        android:ems="20"
                        android:hint="@string/search_your_book"
                        android:inputType="textPersonName"
                        android:textColorHint="@color/black"
                        android:topLeftRadius="15dp"
                        android:topRightRadius="15dp"
                        tools:ignore="MissingConstraints"
                        android:autofillHints="Search bar" />


                <RelativeLayout
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <androidx.cardview.widget.CardView
                        android:id="@+id/books"
                        android:layout_width="160dp"
                        android:layout_height="200dp"
                        app:cardCornerRadius="10dp">

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:scaleType="fitXY"
                                android:src="@drawable/whatsapp_image_2023_04_02_at_16_33_00"
                                android:contentDescription="@string/todo" />

                            <TextView
                                android:text="@string/books"
                                android:layout_marginStart="57dp"
                                android:layout_marginTop="5dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                        </FrameLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/notes"
                        android:layout_width="160dp"
                        android:layout_height="200dp"
                        android:layout_marginStart="23dp"
                        android:layout_toEndOf="@+id/books"
                        app:cardCornerRadius="10dp">

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:scaleType="fitXY"
                                android:src="@drawable/whatsapp_image_2023_04_02_at_16_32_57"
                                android:contentDescription="@string/todo" />

                            <TextView
                                android:text="@string/notes"
                                android:layout_marginStart="58dp"
                                android:layout_marginTop="5dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                        </FrameLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/pyq"
                        android:layout_width="160dp"
                        android:layout_height="210dp"
                        android:layout_marginTop="15dp"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/books"
                        app:cardCornerRadius="10dp">

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:scaleType="fitXY"
                                android:src="@drawable/whatsapp_image_2023_04_02_at_16_32_58"
                                android:contentDescription="@string/todo" />

                            <TextView
                                android:text="@string/p_y_ques"
                                android:layout_marginStart="55dp"
                                android:layout_marginTop="5dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                        </FrameLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/articles"
                        android:layout_width="160dp"
                        android:layout_height="210dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="23dp"
                        android:layout_toEndOf="@+id/pyq"
                        android:layout_below="@+id/books"
                        app:cardCornerRadius="10dp">

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:scaleType="fitXY"
                                android:src="@drawable/whatsapp_image_2023_04_02_at_16_32_583"
                                android:contentDescription="@string/todo" />

                            <TextView
                                android:text="@string/articles"
                                android:layout_marginStart="55dp"
                                android:layout_marginTop="5dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                        </FrameLayout>

                    </androidx.cardview.widget.CardView>
                </RelativeLayout>


                <!--<TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comming_soon"
                    android:textSize="20sp"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comming_soon"
                    android:textSize="20sp"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comming_soon"
                    android:textSize="20sp"
                    android:textStyle="bold">

                </TextView>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comming_soon"
                    android:textSize="20sp"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comming_soon"
                    android:textSize="20sp"
                    android:textStyle="bold">

                </TextView>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comming_soon"
                    android:textSize="20sp"
                    android:textStyle="bold">

                </TextView>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comming_soon"
                    android:textSize="20sp"
                    android:textStyle="bold">

                </TextView>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comming_soon"
                    android:textSize="20sp"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comming_soon"
                    android:textSize="20sp"
                    android:textStyle="bold">

                </TextView>-->

            </LinearLayout>


        </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>

